# deduper

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yaml
deduper/: __init__.py  czkawka.py
tests/: conftest.py  test_cli.py  test_czkawkaw.py
