[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deduper"
version = "0.0.1"
authors = [{name = "Chris Cummings", email = "chris@thesogu.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
# dynamic = ["version", "description"]
dynamic = ["description"]

[project.scripts]
deduper = "deduper:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 130
